--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     <modules>
         <module>krpc-contract</module>
         <module>krpc-server</module>
+        <module>krpc-client</module>
     </modules>
 
     <properties>
